odified layout of index page, added h1 with background of flowers and Carlton dancing

--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
     	<title>indexPage rgTest</title>
-    	<link href="main.css" rel="stylesheet" type="text/css" />
+    	<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
 
 		<header>
-			<nav>
-				<h1>rgTest</h1>
-				<ul>
-					<li><a href="index.html">ONE</a></li>
-    				<li><a href="secondPage.html">TWO</a></li>
-    				<li><a href="thirdPage.html">THREE</a></li>
-    			</ul>
-    		</nav>
-    	</header>
-
+            <h1>This is a test website...</h1>
+        </header>
+		<nav>
+			<ul>
+				<li><a href="index.html">index</a></li>
+    			<li><a href="secondPage.html">two</a></li>
+    			<li><a href="thirdPage.html">three</a></li>
+    		</ul>
+    	</nav>
+    	<main>
+            
+        </main>
     	<div class="row">
-    		<div class="col">ONE</div>
-    		<div class="col">TWO</div>
-    		<div class="col">THREE</div>
-    		<div class="col">FOUR
+    		<div class="col">&frac14; column 1</div>
+    		<div class="col">&frac14; column 2</div>
+    		<div class="col">&frac14; column 3</div>
+    		<div class="col">&frac14; column 4</div>
     	</div>
 
-    	<footer>rgTest - pageOne</footer>
+    	<footer><small>Copywrite &copy; rg 2016</small></footer>
 
 
 
